# apmec-horizon

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.md  README.rst  lower-constraints.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
apmec_horizon/enabled/: _80_mec.py
apmec_horizon/openstack_dashboard/api/: __init__.py  apmec.py
apmec_horizon/openstack_dashboard/dashboards/mec/: dashboard.py
apmec_horizon/openstack_dashboard/dashboards/mec/meacatalog/: forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
apmec_horizon/openstack_dashboard/dashboards/mec/meacatalog/templates/meacatalog/: _onboardmea.html  detail.html  index.html  onboardmea.html  template.html
apmec_horizon/openstack_dashboard/dashboards/mec/meamanager/: forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
apmec_horizon/openstack_dashboard/dashboards/mec/meamanager/templates/meamanager/: _deploy_mea.html  deploy_mea.html  detail.html  index.html  vdu_details.html
apmec_horizon/openstack_dashboard/dashboards/mec/mescatalog/: forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
apmec_horizon/openstack_dashboard/dashboards/mec/mescatalog/templates/mescatalog/: _onboardmes.html  detail.html  index.html  onboardmes.html  template.html
apmec_horizon/openstack_dashboard/dashboards/mec/mesmanager/: forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
apmec_horizon/openstack_dashboard/dashboards/mec/mesmanager/templates/nsmanager/: _deploy_mes.html  deploy_mes.html  detail.html  index.html
apmec_horizon/openstack_dashboard/dashboards/mec/static/mec/css/: mec.css
apmec_horizon/openstack_dashboard/dashboards/mec/templates/mec/: base.html
apmec_horizon/openstack_dashboard/dashboards/mec/vim/: forms.py  panel.py  tables.py  tabs.py  urls.py  views.py
apmec_horizon/test/: settings.py
(+2 files in other folders)
